--- a/sbsclearn/Views/CourseAttempts/Delete.cshtml
+++ b/sbsclearn/Views/CourseAttempts/Delete.cshtml
@@ -12,16 +12,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.UserId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.User.UserID)
+            @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Course)
+            @Html.DisplayNameFor(model => model.CourseId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Course.CourseId)
+            @Html.DisplayFor(model => model.CourseId)
         </dd>
     </dl>
     
