--- a/sbsclearn/Views/CourseAttempts/Edit.cshtml
+++ b/sbsclearn/Views/CourseAttempts/Edit.cshtml
@@ -15,12 +15,12 @@
             <input type="hidden" asp-for="CourseAttemptId" />
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                <input asp-for="UserId" class="form-control" />
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CourseId" class="control-label"></label>
-                <select asp-for="CourseId" class="form-control" asp-items="ViewBag.CourseId"></select>
+                <input asp-for="CourseId" class="form-control" />
                 <span asp-validation-for="CourseId" class="text-danger"></span>
             </div>
             <div class="form-group">
