--- a/sbsclearn/Views/Courses/Details.cshtml
+++ b/sbsclearn/Views/Courses/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.Duration)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.UserId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.User.UserID)
+            @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.FileUploadPath)
