--- a/sbsclearn/Views/Courses/Details.cshtml
+++ b/sbsclearn/Views/Courses/Details.cshtml
@@ -2,52 +2,35 @@
 
 @{
     ViewData["Title"] = "Details";
+    // var picturePath = "~/images/FileUploads/" + (Model.FileUploadPath ?? "image1.png");
 }
 
 <h2>Details</h2>
 
-<div>
-    <h4>Course</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CourseName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Facilitator)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Facilitator)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Duration)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Duration)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.FileUploadPath)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.FileUploadPath)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-    </dl>
+<div class="row justify-content-center m-3">
+    <div class="col-sm-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Html.DisplayFor(model => model.CourseName)
+            </div>
+            <div class="panel-body">
+                @{
+                    var picturePath = "~/images/FileUploads/" + (Model.FileUploadPath ?? "image1.png");
+                }
+                <img class="img-responsive thumbnail" src="@picturePath" asp-append-version="true" />
+                <div class="form-group" style="padding-bottom:">
+                    <label>@Html.DisplayNameFor(model => model.Facilitator) : </label>
+                    @Html.DisplayFor(model => model.Facilitator)
+                </div>
+                <div class="form-group">
+                    <label> @Html.DisplayNameFor(model => model.CourseDetails) : </label>
+                    @Html.DisplayFor(model => model.CourseDetails)
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model.CourseId">Edit</a> |
     <a asp-action="Index">Back to List</a>
