--- a/sbsclearn/Views/Courses/Edit.cshtml
+++ b/sbsclearn/Views/Courses/Edit.cshtml
@@ -28,11 +28,11 @@
                 <input asp-for="Duration" class="form-control" />
                 <span asp-validation-for="Duration" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
                 <input asp-for="UserId" class="form-control" />
                 <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="FileUploadPath" class="control-label"></label>
                 <input asp-for="FileUploadPath" class="form-control" />
