--- a/sbsclearn/Views/Home/Index.cshtml
+++ b/sbsclearn/Views/Home/Index.cshtml
@@ -1,94 +1,137 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model IEnumerable<sbsclearn.Models.Entities.Course>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+
+<div style="padding-top: 10px;">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            @*<div class="item active">
+                    <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+                    <div class="carousel-caption" role="option">
+                        <p>
+                            Learn how to build ASP.NET apps that can run anywhere.
+                            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
+                                Learn More
+                            </a>
+                        </p>
+                    </div>
+                </div>*@
+            <div class="item active">
+                <img src="~/images/bannerImage.jpg" style="height:350px; width: 1200px" alt="Online courses for everyone" class="img-responsive" />
+                <div class="carousel-caption row" role="option">
+                    <div class="col-md-6" style="margin-top: -200px">
+                        <p style="text-align: justify">
+                            There are a lot of exciting courses to spark up new interests or expand the horizon of your career.<br /><br />
+                            <a class="btn btn-info" href="" style="border-radius:0px; width: 150px">
+                                Explore
+                            </a>
+                        </p>
+                    </div>
+
+                </div>
             </div>
+            @*<div class="item">
+                    <img src="~/images/imagesKids.jpeg" style="height:350px; width: 1000px"  alt="Learning for Kids" class="img-responsive" />
+                    <div class="carousel-caption" role="option">
+                        <p>
+                            Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
+                            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
+                                Learn More
+                            </a>
+                        </p>
+                    </div>
+                </div>*@
         </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
+<div class="row" style="padding-top: 10px">
+    @*@foreach (var item in Model)*@
+    @foreach (var user in (IEnumerable<sbsclearn.Models.Entities.Course>)ViewData["courses"])
+    {
+        var picturePath = "~/images/FileUploads/" + (user.FileUploadPath ?? "image1.png");
+        <div class="col-md-3">
+            <div class="panel panel-default">
+                <img class="img-responsive thumbnail" src="@picturePath" id="Panel_Image" asp-append-version="true">
+                <div class="panel-body">
+
+                    <h5 class="panel-title coursefont">@user.CourseName</h5>
+                    <p>	&#8358; @user.Cost</p>
+                    @*<p class="">@item.CourseDetails</p>*@
+                    <a asp-action="Details" asp-route-id="@user.CourseId" asp-controller="Courses" class="btn btn-info" style="border-radius: 0px">View Details </a>
+                    <a asp-action="Details" asp-route-id="@user.CourseId" asp-controller="Courses" class="btn btn-info" style="border-radius: 0px">Enroll </a>
+                </div>
+            </div>
+
+        </div>
+    }
+
 </div>
+
+@*<div class="row" style="padding-top: 10px">
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <img class="img-responsive thumbnail" src="~/images/images2.png" id="Panel_Image">
+            <div class="panel-body">
+
+                <h5 class="panel-title coursefont">Digital Marketing</h5>
+                <p>	&#8358; 10,500</p>
+                <p class="">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-info" style="border-radius: 0px">View Details </a>
+            </div>
+        </div>
+
+    </div>
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <img class="img-responsive thumbnail" src="~/images/images.jpeg" id="Panel_Image">
+            <div class="panel-body">
+                <h5 class="panel-title coursefont">Data Analysis</h5>
+                <p>	&#8358; 4,000</p>
+                <p class="">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-info" style="border-radius: 0px">View Details </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+
+        <div class="panel panel-default">
+            <img class="img-responsive thumbnail" src="~/images/images3.jpeg" id="Panel_Image">
+            <div class="panel-body">
+                <h5 class="panel-title coursefont">Financial Analysis</h5>
+                <p>	&#8358; 5,400</p>
+                <p class="">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-info" style="border-radius: 0px">View Details</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <img class="img-responsive thumbnail" src="~/images/images4.jpeg" id="Panel_Image">
+            <div class="panel-body">
+
+                <h5 class="panel-title coursefont">Online classes for Kids</h5>
+                <p>	&#8358; 6,000</p>
+                <p class="">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-info" style="border-radius: 0px">View Details</a>
+            </div>
+        </div>
+
+    </div>
+</div>*@
