--- a/sbsclearn/Views/Shared/_Layout.cshtml
+++ b/sbsclearn/Views/Shared/_Layout.cshtml
@@ -3,16 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - sbsclearn</title>
+    <title>@ViewData["Title"] - SBSC Learn</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+        asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+        asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />*@
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css" integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG" crossorigin="anonymous">
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
@@ -26,13 +27,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">sbsclearn</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SBSC Learn</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>*@
+                    <li><a asp-area="" asp-controller="Courses" asp-action="Index">Courses</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Score">User Scores</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
@@ -45,7 +46,26 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - sbsclearn</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <a href="#" style="text-decoration: none">SBSC Learn for Business</a>
+               
+                </div>
+                <div class="col-md-3">
+                    <a href="#" style="text-decoration: none">About us </a>
+
+                </div>
+                <div class="col-md-3">
+                    <a href="#" style="text-decoration: none">Careers</a>
+
+                </div>
+                <div class="col-md-3">
+                    <a href="#" style="text-decoration: none">Contact us</a>
+
+                </div>
+            </div>
+            
+            <p style="padding-top: 20px; text-align: right">&copy; 2020 - sbsclearn</p>
         </footer>
     </div>
 
